k8s/apps/api-gateway/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-public
  namespace: apps
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: LoadBalancer
