k8s/apps/api-gateway/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-allow-same-ns
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}   # permet aux autres pods du namespace apps d'appeler le gateway
        - ipBlock:
            cidr: 10.0.0.0/16  # autorise le trafic en provenance du LB (sous-réseaux du VPC)
      ports:
        - protocol: TCP
          port: 3000
